--- a/routing-graziano/src/index.html
+++ b/routing-graziano/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular Routing Graziano</title>
+  <title>Clash Royale Card</title>
   <base href="/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
